Scaling factor doesn't work for a background image when it's in camera #44511

Closed
opened 2015-04-25 01:37:10 +02:00 by Vicente Carro · 15 comments

System Information
linux/ Ubuntu 15.04, nvidia 450m 1gb ram

Blender Version
Blender 2.74 official and all recent git versions I've compiled.

Short description of error
The option "Scaling factor" in the Background Image panel doesn't work when you set the "axis" to All Views.

Exact steps for others to reproduce the error
Open the attached file go to the Background Image panel and try to change the Scaling factor value, bottom-right number. The pictures always remains with the same size even if you move it, rotate it or whatever.
Also when you change the axis to "camera" the "Scaling factor" and "rotate" option disappear. It makes no sense. And that's exactly what I need: rotate and scale a picture in a camera.
And please don't tell me this "is a feature"...
bug-scaling.blend

**System Information** linux/ Ubuntu 15.04, nvidia 450m 1gb ram **Blender Version** Blender 2.74 official and all recent git versions I've compiled. **Short description of error** The option "Scaling factor" in the Background Image panel doesn't work when you set the "axis" to All Views. **Exact steps for others to reproduce the error** Open the attached file go to the Background Image panel and try to change the Scaling factor value, bottom-right number. The pictures always remains with the same size even if you move it, rotate it or whatever. Also when you change the axis to "camera" the "Scaling factor" and "rotate" option disappear. It makes no sense. And that's exactly what I need: rotate and scale a picture in a camera. And please don't tell me this "is a feature"... [bug-scaling.blend](https://archive.blender.org/developer/F166629/bug-scaling.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @VicenteCarro

Added subscriber: @VicenteCarro

Added subscriber: @sindra1961

Added subscriber: @sindra1961

It is specified as follows in the official site.

Background Image

Controls the size, or scale, of the picture in the 3D view (in Blender units).
This is a scalar value so that width and height of the background image are each multiplied by the value to determine the size at which the background image is displayed.
If one wishes to change the proportions of the image, it must be done in an impage processing program, such as GIMP. 
It is specified as follows in the official site. [Background Image ](http://wiki.blender.org/index.php/Doc:2.6/Manual/3D_interaction/Navigating/3D_View_Options) ``` Controls the size, or scale, of the picture in the 3D view (in Blender units). This is a scalar value so that width and height of the background image are each multiplied by the value to determine the size at which the background image is displayed. If one wishes to change the proportions of the image, it must be done in an impage processing program, such as GIMP. ```

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Campbell Barton self-assigned this 2015-04-27 08:38:50 +02:00

This isn't a bug (its a feature request)

Currently there is just no way to scale camera images.
closing.

This isn't a bug (its a feature request) Currently there is just no way to scale camera images. closing.
Author

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Author

The second part of my report is a feature request ok, but the first one is a bug.
If you are changing the value of the Scaling Factor in that situation is doing absolutely nothing. At least it should be disabled or hidden (in that situation).

The second part of my report is a feature request ok, but the first one is a bug. If you are changing the value of the Scaling Factor in that situation is doing absolutely nothing. At least it should be disabled or hidden (in that situation).

Its working in 3dview.
It is not camera view.

Controls the size, or scale, of the picture in the 3D view (in Blender units).
Its working in 3dview. It is not camera view. ``` Controls the size, or scale, of the picture in the 3D view (in Blender units). ```

Added subscribers: @ideasman42, @Sergey

Added subscribers: @ideasman42, @Sergey

You can't really hide/disable it reliably -- it'll be totally misleading in quad view for example.

@ideasman42, probably tooltip can be more explicit?

You can't really hide/disable it reliably -- it'll be totally misleading in quad view for example. @ideasman42, probably tooltip can be more explicit?
Author

And what about making it "disabled" in grey and block it so you can not change its value? So when you are in camera mode that value will be locked at 1 for example.

And what about making it "disabled" in grey and block it so you can not change its value? So when you are in camera mode that value will be locked at 1 for example.

Removed subscriber: @sindra1961

Removed subscriber: @sindra1961

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Updated tooltips, and expose size in units.
aa4c97faa3

Updated tooltips, and expose size in units. aa4c97faa3
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44511
No description provided.