View3D: expose size as a distance in units

also note that size/rotation doesn't work for camera views. see T44511